--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,14 @@
 <h1>
   {{title}}
 </h1>
-<button class="ssp Stein" (click)="selectSSP($event)"></button>
-<button class="ssp Schere" (click)="selectSSP($event)"></button>
-<button class="ssp Papier" (click)="selectSSP($event)"></button>
+
+<app-card *ngFor="let item of sspList" [item]="item" (selected)="selectSSP($event)"></app-card>
+
 <hr>
+
 <span id="result">{{result}}</span>
+
 <hr>
-<div id="mySelected" [ngClass]="mySelected"></div>
+
+<app-card [item]="mySelected"></app-card>
+
